Ajustando a resposividade e style

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <div id="loading" class="hidden">
             <div class="spinner"></div>
-            <p>O DeepSeek está analisando os dados da ESPN. Isto pode demorar alguns segundos...</p>
+            <p>Estamos analisando todos os jogos do dia selecionado. Isto pode demorar alguns segundos...</p>
         </div>
 
         <div id="resultCard" class="hidden">
-            <pre id="resultado"></pre>
+            <div id="resultado"></div>
         </div>
     </div>
 
