Ajustando os botoes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <div class="controls">
-            <input type="date" id="dateInput" />
+            <input type="date" id="dateInput" data-placeholder="Escolha a data da rodada" required />
             <button onclick="analisar()" id="btnAnalisar">
                 <span id="btnText">Analisar Jogos</span>
             </button>
