Corrigindo o PDF gerado

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="resultCard" class="hidden">
             <div id="resultado"></div>
             <div style="text-align: center; margin-top: 30px;">
-            <button onclick="gerarPDF()" id="btnPDF" style="background: #334155; color: #fff;">
+            <button onclick="gerarPDF()" id="btnPDF">
                 📥 Baixar Análise
             </button>
         </div>
