--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
         <div id="resultCard" class="hidden">
             <div id="resultado"></div>
-            <div style="text-align: center; margin-top: 30px;">
-            <button onclick="gerarPDF()" id="btnPDF">
-                📥 Baixar Análise
-            </button>
-        </div>
+            <div style="text-align: center; margin-top: 30px; display: flex; justify-content: center; gap: 10px;">
+                <button onclick="copiarTexto()" id="btnCopiar" style="cursor: pointer;">
+                    📋 Copiar Análise
+                </button>
+            </div>
         </div>
     </div>
 
