--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="controls">
             <!-- Campo de data (preenchido com hoje no onload do app.js) -->
-            <input type="date" id="dateInput" data-placeholder="Escolha a data da rodada" required />
+            <input type="date" id="dateInput" required />
             <!-- Clique normal: sempre aciona a análise; cache é controlado no backend com TTL -->
             <button onclick="analisar()" id="btnAnalisar"
                 title="Sempre roda a análise; cache expira em 10 minutos automaticamente">
