Adicionando o timer do redis

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             </button>
         </div>
 
+        <div id="timerContainer"
+            style="display: none; text-align: center; margin-top: 14px; font-size: 1em; color: #94a3b8; font-weight: bold; font-style: italic;">
+            Status do Sistema: <strong id="countdownTimer"
+                style="color: #10b981; font-family: monospace; font-size: 1.2em; font-weight: 600; letter-spacing: 1px;">00:00:00</strong>
+        </div>
+
         <!-- Loading -->
         <div id="loading" class="hidden">
             <div class="spinner"></div>
